Inzynierka/force-app/main/default/objects/New_Product__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>