Inzynierka/force-app/main/default/objects/New_Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>45</length>
    <type>Text</type>
</CustomField>