Inzynierka/force-app/main/default/objects/New_Product__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <label>Calories</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>