Inzynierka/force-app/main/default/objects/New_Product__c/fields/Carbohydrates__c.field-meta.xml
<CustomField>
    <fullName>Carbohydrates__c</fullName>
    <label>Carbohydrates</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>