Inzynierka/force-app/main/default/objects/New_Product__c/fields/Fat__c.field-meta.xml
<CustomField>
    <fullName>Fat__c</fullName>
    <label>Fat</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>