Inzynierka/force-app/main/default/objects/New_Product__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>